kubernetes/infra/garage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage
  namespace: garage
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    app: garage
  ports:
    - name: s3
      port: 3900
      targetPort: s3
    - name: rpc
      port: 3901
      targetPort: rpc
    - name: admin
      port: 3903
      targetPort: admin
